--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,10 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+22-Финальный_проект-Прогнозирование_ухода_клиента_провайдера/phone_new.csv
+22-Финальный_проект-Прогнозирование_ухода_клиента_провайдера/personal_new.csv
+22-Финальный_проект-Прогнозирование_ухода_клиента_провайдера/internet_new.csv
+22-Финальный_проект-Прогнозирование_ухода_клиента_провайдера/contract_new.csv
+22-Финальный_проект-Прогнозирование_ухода_клиента_провайдера/catboost_info/
+22-Финальный_проект-Прогнозирование_ухода_клиента_провайдера/3c12-01.png.bak
